--- a/_config.yml
+++ b/_config.yml
@@ -2,16 +2,16 @@
 title:               'Today I Learned'
 tagline:             'Notes to self about software development'
 description:         ''
-url:                 https://appdev-projects.github.io/
+url:                 https://pmckernin.github.io/
 baseurl:             'til/'
 paginate:            5
 permalink:           pretty
 
 # About/contact
 author:
-  name:              Raghu Betina
-  url:               https://twitter.com/raghubetina
-  email:             raghu@firstdraft.com
+  name:              Pat McKernin
+  
+  email:             patrick@firstdraft.com
 
 # Gems
 plugins:
